simples/sintatico.output
Terminals unused in grammar

    T_EOU


Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: cabecalho $@1 variaveis T_INICIO lista_comandos T_FIM

    3 cabecalho: T_PROGRAMA T_IDENTIF

    4 variaveis: declaracao_variaveis
    5          | %empty

    6 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    7                     | tipo lista_variaveis

    8 tipo: T_LOGICO
    9     | T_INTEIRO

   10 lista_variaveis: lista_variaveis T_IDENTIF
   11                | T_IDENTIF

   12 lista_comandos: comando lista_comandos
   13               | %empty

   14 comando: entrada_saida
   15        | repeticao
   16        | selecao
   17        | atribuicao

   18 entrada_saida: leitura
   19              | escrita

   20 leitura: T_LEIA T_IDENTIF

   21 escrita: T_ESCREVA expressao

   22 $@2: %empty

   23 $@3: %empty

   24 repeticao: T_ENQTO $@2 expressao T_FACA $@3 lista_comandos T_FIMENQTO

   25 $@4: %empty

   26 $@5: %empty

   27 repeticao: T_REPITA lista_comandos $@4 T_ATE expressao $@5 T_FIMREPITA

   28 $@6: %empty

   29 $@7: %empty

   30 selecao: T_SE expressao T_ENTAO $@6 lista_comandos T_SENAO $@7 lista_comandos T_FIMSE

   31 $@8: %empty

   32 atribuicao: T_IDENTIF $@8 T_ATRIB expressao

   33 expressao: expressao T_VEZES expressao
   34          | expressao T_DIV expressao
   35          | expressao T_MAIS expressao
   36          | expressao T_MENOS expressao
   37          | expressao T_MAIOR expressao
   38          | expressao T_MENOR expressao
   39          | expressao T_IGUAL expressao
   40          | expressao T_E expressao
   41          | expressao T_OU expressao
   42          | termo

   43 termo: T_IDENTIF
   44      | T_NUMERO
   45      | T_V
   46      | T_F
   47      | T_NAO termo
   48      | T_ABRE expressao T_FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 3
    T_INICIO (259) 2
    T_FIM (260) 2
    T_IDENTIF (261) 3 10 11 20 32 43
    T_LEIA (262) 20
    T_ESCREVA (263) 21
    T_ENQTO (264) 24
    T_FACA (265) 24
    T_FIMENQTO (266) 24
    T_REPITA (267) 27
    T_ATE (268) 27
    T_FIMREPITA (269) 27
    T_SE (270) 30
    T_ENTAO (271) 30
    T_SENAO (272) 30
    T_FIMSE (273) 30
    T_ATRIB (274) 32
    T_VEZES (275) 33
    T_DIV (276) 34
    T_MAIS (277) 35
    T_MENOS (278) 36
    T_MAIOR (279) 37
    T_MENOR (280) 38
    T_IGUAL (281) 39
    T_EOU (282)
    T_NAO (283) 47
    T_V (284) 45
    T_F (285) 46
    T_NUMERO (286) 44
    T_ABRE (287) 48
    T_FECHA (288) 48
    T_INTEIRO (289) 9
    T_LOGICO (290) 8
    T_E (291) 40
    T_OU (292) 41


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    programa (39)
        on left: 2
        on right: 0
    $@1 (40)
        on left: 1
        on right: 2
    cabecalho (41)
        on left: 3
        on right: 2
    variaveis (42)
        on left: 4 5
        on right: 2
    declaracao_variaveis (43)
        on left: 6 7
        on right: 4 6
    tipo (44)
        on left: 8 9
        on right: 6 7
    lista_variaveis (45)
        on left: 10 11
        on right: 6 7 10
    lista_comandos (46)
        on left: 12 13
        on right: 2 12 24 27 30
    comando (47)
        on left: 14 15 16 17
        on right: 12
    entrada_saida (48)
        on left: 18 19
        on right: 14
    leitura (49)
        on left: 20
        on right: 18
    escrita (50)
        on left: 21
        on right: 19
    repeticao (51)
        on left: 24 27
        on right: 15
    $@2 (52)
        on left: 22
        on right: 24
    $@3 (53)
        on left: 23
        on right: 24
    $@4 (54)
        on left: 25
        on right: 27
    $@5 (55)
        on left: 26
        on right: 27
    selecao (56)
        on left: 30
        on right: 16
    $@6 (57)
        on left: 28
        on right: 30
    $@7 (58)
        on left: 29
        on right: 30
    atribuicao (59)
        on left: 32
        on right: 17
    $@8 (60)
        on left: 31
        on right: 32
    expressao (61)
        on left: 33 34 35 36 37 38 39 40 41 42
        on right: 21 24 27 30 32 33 34 35 36 37 38 39 40 41 48
    termo (62)
        on left: 43 44 45 46 47 48
        on right: 42 47


State 0

    0 $accept: . programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    3 cabecalho: T_PROGRAMA . T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


State 3

    2 programa: cabecalho . $@1 variaveis T_INICIO lista_comandos T_FIM

    $default  reduce using rule 1 ($@1)

    $@1  go to state 6


State 4

    3 cabecalho: T_PROGRAMA T_IDENTIF .

    $default  reduce using rule 3 (cabecalho)


State 5

    0 $accept: programa $end .

    $default  accept


State 6

    2 programa: cabecalho $@1 . variaveis T_INICIO lista_comandos T_FIM

    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8

    $default  reduce using rule 5 (variaveis)

    variaveis             go to state 9
    declaracao_variaveis  go to state 10
    tipo                  go to state 11


State 7

    9 tipo: T_INTEIRO .

    $default  reduce using rule 9 (tipo)


State 8

    8 tipo: T_LOGICO .

    $default  reduce using rule 8 (tipo)


State 9

    2 programa: cabecalho $@1 variaveis . T_INICIO lista_comandos T_FIM

    T_INICIO  shift, and go to state 12


State 10

    4 variaveis: declaracao_variaveis .

    $default  reduce using rule 4 (variaveis)


State 11

    6 declaracao_variaveis: tipo . lista_variaveis declaracao_variaveis
    7                     | tipo . lista_variaveis

    T_IDENTIF  shift, and go to state 13

    lista_variaveis  go to state 14


State 12

    2 programa: cabecalho $@1 variaveis T_INICIO . lista_comandos T_FIM

    T_IDENTIF  shift, and go to state 15
    T_LEIA     shift, and go to state 16
    T_ESCREVA  shift, and go to state 17
    T_ENQTO    shift, and go to state 18
    T_REPITA   shift, and go to state 19
    T_SE       shift, and go to state 20

    $default  reduce using rule 13 (lista_comandos)

    lista_comandos  go to state 21
    comando         go to state 22
    entrada_saida   go to state 23
    leitura         go to state 24
    escrita         go to state 25
    repeticao       go to state 26
    selecao         go to state 27
    atribuicao      go to state 28


State 13

   11 lista_variaveis: T_IDENTIF .

    $default  reduce using rule 11 (lista_variaveis)


State 14

    6 declaracao_variaveis: tipo lista_variaveis . declaracao_variaveis
    7                     | tipo lista_variaveis .
   10 lista_variaveis: lista_variaveis . T_IDENTIF

    T_IDENTIF  shift, and go to state 29
    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8

    $default  reduce using rule 7 (declaracao_variaveis)

    declaracao_variaveis  go to state 30
    tipo                  go to state 11


State 15

   32 atribuicao: T_IDENTIF . $@8 T_ATRIB expressao

    $default  reduce using rule 31 ($@8)

    $@8  go to state 31


State 16

   20 leitura: T_LEIA . T_IDENTIF

    T_IDENTIF  shift, and go to state 32


State 17

   21 escrita: T_ESCREVA . expressao

    T_IDENTIF  shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_NUMERO   shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 39
    termo      go to state 40


State 18

   24 repeticao: T_ENQTO . $@2 expressao T_FACA $@3 lista_comandos T_FIMENQTO

    $default  reduce using rule 22 ($@2)

    $@2  go to state 41


State 19

   27 repeticao: T_REPITA . lista_comandos $@4 T_ATE expressao $@5 T_FIMREPITA

    T_IDENTIF  shift, and go to state 15
    T_LEIA     shift, and go to state 16
    T_ESCREVA  shift, and go to state 17
    T_ENQTO    shift, and go to state 18
    T_REPITA   shift, and go to state 19
    T_SE       shift, and go to state 20

    $default  reduce using rule 13 (lista_comandos)

    lista_comandos  go to state 42
    comando         go to state 22
    entrada_saida   go to state 23
    leitura         go to state 24
    escrita         go to state 25
    repeticao       go to state 26
    selecao         go to state 27
    atribuicao      go to state 28


State 20

   30 selecao: T_SE . expressao T_ENTAO $@6 lista_comandos T_SENAO $@7 lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_NUMERO   shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 43
    termo      go to state 40


State 21

    2 programa: cabecalho $@1 variaveis T_INICIO lista_comandos . T_FIM

    T_FIM  shift, and go to state 44


State 22

   12 lista_comandos: comando . lista_comandos

    T_IDENTIF  shift, and go to state 15
    T_LEIA     shift, and go to state 16
    T_ESCREVA  shift, and go to state 17
    T_ENQTO    shift, and go to state 18
    T_REPITA   shift, and go to state 19
    T_SE       shift, and go to state 20

    $default  reduce using rule 13 (lista_comandos)

    lista_comandos  go to state 45
    comando         go to state 22
    entrada_saida   go to state 23
    leitura         go to state 24
    escrita         go to state 25
    repeticao       go to state 26
    selecao         go to state 27
    atribuicao      go to state 28


State 23

   14 comando: entrada_saida .

    $default  reduce using rule 14 (comando)


State 24

   18 entrada_saida: leitura .

    $default  reduce using rule 18 (entrada_saida)


State 25

   19 entrada_saida: escrita .

    $default  reduce using rule 19 (entrada_saida)


State 26

   15 comando: repeticao .

    $default  reduce using rule 15 (comando)


State 27

   16 comando: selecao .

    $default  reduce using rule 16 (comando)


State 28

   17 comando: atribuicao .

    $default  reduce using rule 17 (comando)


State 29

   10 lista_variaveis: lista_variaveis T_IDENTIF .

    $default  reduce using rule 10 (lista_variaveis)


State 30

    6 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis .

    $default  reduce using rule 6 (declaracao_variaveis)


State 31

   32 atribuicao: T_IDENTIF $@8 . T_ATRIB expressao

    T_ATRIB  shift, and go to state 46


State 32

   20 leitura: T_LEIA T_IDENTIF .

    $default  reduce using rule 20 (leitura)


State 33

   43 termo: T_IDENTIF .

    $default  reduce using rule 43 (termo)


State 34

   47 termo: T_NAO . termo

    T_IDENTIF  shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_NUMERO   shift, and go to state 37
    T_ABRE     shift, and go to state 38

    termo  go to state 47


State 35

   45 termo: T_V .

    $default  reduce using rule 45 (termo)


State 36

   46 termo: T_F .

    $default  reduce using rule 46 (termo)


State 37

   44 termo: T_NUMERO .

    $default  reduce using rule 44 (termo)


State 38

   48 termo: T_ABRE . expressao T_FECHA

    T_IDENTIF  shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_NUMERO   shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 48
    termo      go to state 40


State 39

   21 escrita: T_ESCREVA expressao .
   33 expressao: expressao . T_VEZES expressao
   34          | expressao . T_DIV expressao
   35          | expressao . T_MAIS expressao
   36          | expressao . T_MENOS expressao
   37          | expressao . T_MAIOR expressao
   38          | expressao . T_MENOR expressao
   39          | expressao . T_IGUAL expressao
   40          | expressao . T_E expressao
   41          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55
    T_E      shift, and go to state 56
    T_OU     shift, and go to state 57

    $default  reduce using rule 21 (escrita)


State 40

   42 expressao: termo .

    $default  reduce using rule 42 (expressao)


State 41

   24 repeticao: T_ENQTO $@2 . expressao T_FACA $@3 lista_comandos T_FIMENQTO

    T_IDENTIF  shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_NUMERO   shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 58
    termo      go to state 40


State 42

   27 repeticao: T_REPITA lista_comandos . $@4 T_ATE expressao $@5 T_FIMREPITA

    $default  reduce using rule 25 ($@4)

    $@4  go to state 59


State 43

   30 selecao: T_SE expressao . T_ENTAO $@6 lista_comandos T_SENAO $@7 lista_comandos T_FIMSE
   33 expressao: expressao . T_VEZES expressao
   34          | expressao . T_DIV expressao
   35          | expressao . T_MAIS expressao
   36          | expressao . T_MENOS expressao
   37          | expressao . T_MAIOR expressao
   38          | expressao . T_MENOR expressao
   39          | expressao . T_IGUAL expressao
   40          | expressao . T_E expressao
   41          | expressao . T_OU expressao

    T_ENTAO  shift, and go to state 60
    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55
    T_E      shift, and go to state 56
    T_OU     shift, and go to state 57


State 44

    2 programa: cabecalho $@1 variaveis T_INICIO lista_comandos T_FIM .

    $default  reduce using rule 2 (programa)


State 45

   12 lista_comandos: comando lista_comandos .

    $default  reduce using rule 12 (lista_comandos)


State 46

   32 atribuicao: T_IDENTIF $@8 T_ATRIB . expressao

    T_IDENTIF  shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_NUMERO   shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 61
    termo      go to state 40


State 47

   47 termo: T_NAO termo .

    $default  reduce using rule 47 (termo)


State 48

   33 expressao: expressao . T_VEZES expressao
   34          | expressao . T_DIV expressao
   35          | expressao . T_MAIS expressao
   36          | expressao . T_MENOS expressao
   37          | expressao . T_MAIOR expressao
   38          | expressao . T_MENOR expressao
   39          | expressao . T_IGUAL expressao
   40          | expressao . T_E expressao
   41          | expressao . T_OU expressao
   48 termo: T_ABRE expressao . T_FECHA

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55
    T_FECHA  shift, and go to state 62
    T_E      shift, and go to state 56
    T_OU     shift, and go to state 57


State 49

   33 expressao: expressao T_VEZES . expressao

    T_IDENTIF  shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_NUMERO   shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 63
    termo      go to state 40


State 50

   34 expressao: expressao T_DIV . expressao

    T_IDENTIF  shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_NUMERO   shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 64
    termo      go to state 40


State 51

   35 expressao: expressao T_MAIS . expressao

    T_IDENTIF  shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_NUMERO   shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 65
    termo      go to state 40


State 52

   36 expressao: expressao T_MENOS . expressao

    T_IDENTIF  shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_NUMERO   shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 66
    termo      go to state 40


State 53

   37 expressao: expressao T_MAIOR . expressao

    T_IDENTIF  shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_NUMERO   shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 67
    termo      go to state 40


State 54

   38 expressao: expressao T_MENOR . expressao

    T_IDENTIF  shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_NUMERO   shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 68
    termo      go to state 40


State 55

   39 expressao: expressao T_IGUAL . expressao

    T_IDENTIF  shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_NUMERO   shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 69
    termo      go to state 40


State 56

   40 expressao: expressao T_E . expressao

    T_IDENTIF  shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_NUMERO   shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 70
    termo      go to state 40


State 57

   41 expressao: expressao T_OU . expressao

    T_IDENTIF  shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_NUMERO   shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 71
    termo      go to state 40


State 58

   24 repeticao: T_ENQTO $@2 expressao . T_FACA $@3 lista_comandos T_FIMENQTO
   33 expressao: expressao . T_VEZES expressao
   34          | expressao . T_DIV expressao
   35          | expressao . T_MAIS expressao
   36          | expressao . T_MENOS expressao
   37          | expressao . T_MAIOR expressao
   38          | expressao . T_MENOR expressao
   39          | expressao . T_IGUAL expressao
   40          | expressao . T_E expressao
   41          | expressao . T_OU expressao

    T_FACA   shift, and go to state 72
    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55
    T_E      shift, and go to state 56
    T_OU     shift, and go to state 57


State 59

   27 repeticao: T_REPITA lista_comandos $@4 . T_ATE expressao $@5 T_FIMREPITA

    T_ATE  shift, and go to state 73


State 60

   30 selecao: T_SE expressao T_ENTAO . $@6 lista_comandos T_SENAO $@7 lista_comandos T_FIMSE

    $default  reduce using rule 28 ($@6)

    $@6  go to state 74


State 61

   32 atribuicao: T_IDENTIF $@8 T_ATRIB expressao .
   33 expressao: expressao . T_VEZES expressao
   34          | expressao . T_DIV expressao
   35          | expressao . T_MAIS expressao
   36          | expressao . T_MENOS expressao
   37          | expressao . T_MAIOR expressao
   38          | expressao . T_MENOR expressao
   39          | expressao . T_IGUAL expressao
   40          | expressao . T_E expressao
   41          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55
    T_E      shift, and go to state 56
    T_OU     shift, and go to state 57

    $default  reduce using rule 32 (atribuicao)


State 62

   48 termo: T_ABRE expressao T_FECHA .

    $default  reduce using rule 48 (termo)


State 63

   33 expressao: expressao . T_VEZES expressao
   33          | expressao T_VEZES expressao .
   34          | expressao . T_DIV expressao
   35          | expressao . T_MAIS expressao
   36          | expressao . T_MENOS expressao
   37          | expressao . T_MAIOR expressao
   38          | expressao . T_MENOR expressao
   39          | expressao . T_IGUAL expressao
   40          | expressao . T_E expressao
   41          | expressao . T_OU expressao

    $default  reduce using rule 33 (expressao)


State 64

   33 expressao: expressao . T_VEZES expressao
   34          | expressao . T_DIV expressao
   34          | expressao T_DIV expressao .
   35          | expressao . T_MAIS expressao
   36          | expressao . T_MENOS expressao
   37          | expressao . T_MAIOR expressao
   38          | expressao . T_MENOR expressao
   39          | expressao . T_IGUAL expressao
   40          | expressao . T_E expressao
   41          | expressao . T_OU expressao

    $default  reduce using rule 34 (expressao)


State 65

   33 expressao: expressao . T_VEZES expressao
   34          | expressao . T_DIV expressao
   35          | expressao . T_MAIS expressao
   35          | expressao T_MAIS expressao .
   36          | expressao . T_MENOS expressao
   37          | expressao . T_MAIOR expressao
   38          | expressao . T_MENOR expressao
   39          | expressao . T_IGUAL expressao
   40          | expressao . T_E expressao
   41          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50

    $default  reduce using rule 35 (expressao)


State 66

   33 expressao: expressao . T_VEZES expressao
   34          | expressao . T_DIV expressao
   35          | expressao . T_MAIS expressao
   36          | expressao . T_MENOS expressao
   36          | expressao T_MENOS expressao .
   37          | expressao . T_MAIOR expressao
   38          | expressao . T_MENOR expressao
   39          | expressao . T_IGUAL expressao
   40          | expressao . T_E expressao
   41          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50

    $default  reduce using rule 36 (expressao)


State 67

   33 expressao: expressao . T_VEZES expressao
   34          | expressao . T_DIV expressao
   35          | expressao . T_MAIS expressao
   36          | expressao . T_MENOS expressao
   37          | expressao . T_MAIOR expressao
   37          | expressao T_MAIOR expressao .
   38          | expressao . T_MENOR expressao
   39          | expressao . T_IGUAL expressao
   40          | expressao . T_E expressao
   41          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52

    $default  reduce using rule 37 (expressao)


State 68

   33 expressao: expressao . T_VEZES expressao
   34          | expressao . T_DIV expressao
   35          | expressao . T_MAIS expressao
   36          | expressao . T_MENOS expressao
   37          | expressao . T_MAIOR expressao
   38          | expressao . T_MENOR expressao
   38          | expressao T_MENOR expressao .
   39          | expressao . T_IGUAL expressao
   40          | expressao . T_E expressao
   41          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52

    $default  reduce using rule 38 (expressao)


State 69

   33 expressao: expressao . T_VEZES expressao
   34          | expressao . T_DIV expressao
   35          | expressao . T_MAIS expressao
   36          | expressao . T_MENOS expressao
   37          | expressao . T_MAIOR expressao
   38          | expressao . T_MENOR expressao
   39          | expressao . T_IGUAL expressao
   39          | expressao T_IGUAL expressao .
   40          | expressao . T_E expressao
   41          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54

    $default  reduce using rule 39 (expressao)


State 70

   33 expressao: expressao . T_VEZES expressao
   34          | expressao . T_DIV expressao
   35          | expressao . T_MAIS expressao
   36          | expressao . T_MENOS expressao
   37          | expressao . T_MAIOR expressao
   38          | expressao . T_MENOR expressao
   39          | expressao . T_IGUAL expressao
   40          | expressao . T_E expressao
   40          | expressao T_E expressao .
   41          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55

    $default  reduce using rule 40 (expressao)


State 71

   33 expressao: expressao . T_VEZES expressao
   34          | expressao . T_DIV expressao
   35          | expressao . T_MAIS expressao
   36          | expressao . T_MENOS expressao
   37          | expressao . T_MAIOR expressao
   38          | expressao . T_MENOR expressao
   39          | expressao . T_IGUAL expressao
   40          | expressao . T_E expressao
   41          | expressao . T_OU expressao
   41          | expressao T_OU expressao .

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55

    $default  reduce using rule 41 (expressao)


State 72

   24 repeticao: T_ENQTO $@2 expressao T_FACA . $@3 lista_comandos T_FIMENQTO

    $default  reduce using rule 23 ($@3)

    $@3  go to state 75


State 73

   27 repeticao: T_REPITA lista_comandos $@4 T_ATE . expressao $@5 T_FIMREPITA

    T_IDENTIF  shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_V        shift, and go to state 35
    T_F        shift, and go to state 36
    T_NUMERO   shift, and go to state 37
    T_ABRE     shift, and go to state 38

    expressao  go to state 76
    termo      go to state 40


State 74

   30 selecao: T_SE expressao T_ENTAO $@6 . lista_comandos T_SENAO $@7 lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 15
    T_LEIA     shift, and go to state 16
    T_ESCREVA  shift, and go to state 17
    T_ENQTO    shift, and go to state 18
    T_REPITA   shift, and go to state 19
    T_SE       shift, and go to state 20

    $default  reduce using rule 13 (lista_comandos)

    lista_comandos  go to state 77
    comando         go to state 22
    entrada_saida   go to state 23
    leitura         go to state 24
    escrita         go to state 25
    repeticao       go to state 26
    selecao         go to state 27
    atribuicao      go to state 28


State 75

   24 repeticao: T_ENQTO $@2 expressao T_FACA $@3 . lista_comandos T_FIMENQTO

    T_IDENTIF  shift, and go to state 15
    T_LEIA     shift, and go to state 16
    T_ESCREVA  shift, and go to state 17
    T_ENQTO    shift, and go to state 18
    T_REPITA   shift, and go to state 19
    T_SE       shift, and go to state 20

    $default  reduce using rule 13 (lista_comandos)

    lista_comandos  go to state 78
    comando         go to state 22
    entrada_saida   go to state 23
    leitura         go to state 24
    escrita         go to state 25
    repeticao       go to state 26
    selecao         go to state 27
    atribuicao      go to state 28


State 76

   27 repeticao: T_REPITA lista_comandos $@4 T_ATE expressao . $@5 T_FIMREPITA
   33 expressao: expressao . T_VEZES expressao
   34          | expressao . T_DIV expressao
   35          | expressao . T_MAIS expressao
   36          | expressao . T_MENOS expressao
   37          | expressao . T_MAIOR expressao
   38          | expressao . T_MENOR expressao
   39          | expressao . T_IGUAL expressao
   40          | expressao . T_E expressao
   41          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 49
    T_DIV    shift, and go to state 50
    T_MAIS   shift, and go to state 51
    T_MENOS  shift, and go to state 52
    T_MAIOR  shift, and go to state 53
    T_MENOR  shift, and go to state 54
    T_IGUAL  shift, and go to state 55
    T_E      shift, and go to state 56
    T_OU     shift, and go to state 57

    $default  reduce using rule 26 ($@5)

    $@5  go to state 79


State 77

   30 selecao: T_SE expressao T_ENTAO $@6 lista_comandos . T_SENAO $@7 lista_comandos T_FIMSE

    T_SENAO  shift, and go to state 80


State 78

   24 repeticao: T_ENQTO $@2 expressao T_FACA $@3 lista_comandos . T_FIMENQTO

    T_FIMENQTO  shift, and go to state 81


State 79

   27 repeticao: T_REPITA lista_comandos $@4 T_ATE expressao $@5 . T_FIMREPITA

    T_FIMREPITA  shift, and go to state 82


State 80

   30 selecao: T_SE expressao T_ENTAO $@6 lista_comandos T_SENAO . $@7 lista_comandos T_FIMSE

    $default  reduce using rule 29 ($@7)

    $@7  go to state 83


State 81

   24 repeticao: T_ENQTO $@2 expressao T_FACA $@3 lista_comandos T_FIMENQTO .

    $default  reduce using rule 24 (repeticao)


State 82

   27 repeticao: T_REPITA lista_comandos $@4 T_ATE expressao $@5 T_FIMREPITA .

    $default  reduce using rule 27 (repeticao)


State 83

   30 selecao: T_SE expressao T_ENTAO $@6 lista_comandos T_SENAO $@7 . lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 15
    T_LEIA     shift, and go to state 16
    T_ESCREVA  shift, and go to state 17
    T_ENQTO    shift, and go to state 18
    T_REPITA   shift, and go to state 19
    T_SE       shift, and go to state 20

    $default  reduce using rule 13 (lista_comandos)

    lista_comandos  go to state 84
    comando         go to state 22
    entrada_saida   go to state 23
    leitura         go to state 24
    escrita         go to state 25
    repeticao       go to state 26
    selecao         go to state 27
    atribuicao      go to state 28


State 84

   30 selecao: T_SE expressao T_ENTAO $@6 lista_comandos T_SENAO $@7 lista_comandos . T_FIMSE

    T_FIMSE  shift, and go to state 85


State 85

   30 selecao: T_SE expressao T_ENTAO $@6 lista_comandos T_SENAO $@7 lista_comandos T_FIMSE .

    $default  reduce using rule 30 (selecao)
